[project]
name = "muto"
version = "0.1.0"
description = "MuTO, 轉職負責於 Model Context Protocol, MCP 的 API 服務器，提供模型上下文管理、任務派發與結果追蹤等核心功能"
readme = "README.md"
requires-python = ">=3.13"

# --- Production Dependencies 生產環境依賴 ---
# 這些是程式運行、部署到伺服器時必須安裝的核心套件
dependencies = [
    # ======= Core Web & Framework 核心框架與伺服器 =======
    "fastapi>=0.135.2",             # Modern Web Framework 核心網頁框架，負責路由與 API 邏輯
    "uvicorn>=0.42.0",              # ASGI Server 執行 FastAPI 程式的底層高效能網頁伺服器
    "pydantic-settings>=2.13.1",    # Settings Management 讀取 .env 並驗證環境變數配置
    "python-dotenv>=1.2.2",         # Environment Variables 從 .env 檔案載入變數到環境中
    # ======= MCP Server MCP 協議伺服器 =======
    "fastmcp>=2.0.0",               # MCP Server 基於 Model Context Protocol 的技能主機核心，負責動態加載與執行 Skills
    # ======= Database 連線擴充 =======
    "asyncpg>=0.30.0",              # Database Driver 高效能非同步 PostgreSQL 驅動，直連 EIDo
    "pgvector>=0.3.6",              # Vector DB Extension 讓 asyncpg 具備解讀向量型態的能力
    # ======= Redis & Caching 快取讀取 =======
    "redis[hiredis]>=7.4.0",        # Redis Client 讀取快取資料與狀態共享，使用 C 擴展提升性能
    # ======= Network & Resiliency 網路通訊與容錯 =======
    "httpx>=0.28.1",                # Async HTTP Client 用於發送網路請求給其他內部服務（支援非同步）
    "tenacity>=9.1.4",              # Retry Logic 強化網路請求穩定性，實作指數退避重試與錯誤容護
    # ======= Security 安全驗證 =======
    "pyjwt>=2.12.1",                # JSON Web Token 驗證來自 AleT 的請求令牌
    # ======= Scalar API 文件套件 =======
    "scalar-fastapi>=1.8.1",
    # ======= Observability 監控日誌 =======
    "structlog>=25.5.0",            # Structured Logging 結構化日誌工具，提供更清晰的日誌輸出與分析能力
    # ======= Performance Accelerators 效能加速 =======
    "orjson>=3.11.7",               # Fast JSON Serialization 高效能 JSON 序列化與反序列化，優化 API 吞吐量
    # ======= Dynamic Module Loading 動態模組載入 =======
    "importlib-metadata>=7.0.0",    # Plugin Discovery 動態發現與載入 Skills 插件模組的反射工具
]

# --- Dependency Groups 開發環境工具 ---
# 這些工具僅在開發時期使用（如檢查格式），不會安裝到正式環境中
[dependency-groups]
dev = [
    # ======= Testing 自動化測試 =======
    "pytest>=9.0.2",                # Testing Framework 自動化測試框架，確保程式邏輯正確
    "pytest-asyncio>=1.3.0",        # Async Testing Plugin 支援非同步程式碼的測試，讓測試覆蓋率更全面
    "ruff>=0.15.8",                 # All-in-one Linter & Formatter 極速的代碼檢查與排版工具
]

# --- Tool Configuration 外部工具自定義設定 ---

# Ruff 設定：確保程式碼風格統一，減少人為排版錯誤
[tool.ruff]
line-length = 88                    # Line Length：設定每行程式碼的最大長度（符合 PEP 8 標準）
target-version = "py313"            # Target Version：設定目標 Python 版本，讓檢查器支援最新語法

[tool.ruff.lint]
# Select Rules：啟用的檢查規則組
select = ["E", "F", "I"]            # E: py codestyle 一般語法錯誤
                                    # F: Pyflakes 邏輯與語法錯誤 像是未定義變數或重複引用
                                    # I: isort 自動處理 Import 引用排序與組織、未使用的 import、循環 import 等問題

ignore = []                         # Ignore Rules：忽略特定的警告（目前保持嚴謹，未忽略任何項目）

[tool.ruff.format]
quote-style = "double"              # Quote Style：強制使用「雙引號」，這是 Python 現代開發的標準慣例
